--- a/FrontEnd/src/app/navigation/navigation.component.html
+++ b/FrontEnd/src/app/navigation/navigation.component.html
@@ -1,3 +1,6 @@
-<p>
-  navigation works!
-</p>
+<ul>
+	<li class="nav-elem">Home</li>
+	<li class="nav-elem">Category</li>
+	<li class="nav-elem">Login</li>
+	<li class="nav-elem">Register</li>
+</ul>
