Wrapped the whole index page
Added a div container that wraps the whole index page.

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navigation></app-navigation>
-<app-timeline></app-timeline>
+<div id="page-container">
+	<app-navigation></app-navigation>
+	<app-timeline></app-timeline>
+</div>
