--- a/FrontEnd/src/reset.css
+++ b/FrontEnd/src/reset.css
@@ -46,3 +46,8 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+a, a:link, a:visited, a:active{
+	color: black;
+	text-decoration: none;
+}
