Basic navigation styling done.
* Colors are not final
* Layout is done
* Font size will probably be different

--- a/FrontEnd/src/app/navigation/navigation.component.html
+++ b/FrontEnd/src/app/navigation/navigation.component.html
@@ -1,6 +1,8 @@
-<ul>
-	<li class="nav-elem">Home</li>
-	<li class="nav-elem">Category</li>
-	<li class="nav-elem">Login</li>
-	<li class="nav-elem">Register</li>
-</ul>
+<nav>
+	<ul>
+		<li class="nav-elem left"><a href="#">Home</a></li>
+		<li class="nav-elem left"><a href="#">Category</a></li>
+		<li class="nav-elem right"><a href="#">Login</a></li>
+		<li class="nav-elem right"><a href="#">Register</a></li>
+	</ul>
+</nav>
