--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div id="page-container">
-	<app-navigation></app-navigation>
+	<div id="page-header">
+		<p>Logo</p>
+		<app-navigation></app-navigation>
+	</div>
+
 	<app-timeline></app-timeline>
 </div>
