Changed the color scheme.
Made some basic css classes to be added to the elements.

--- a/FrontEnd/src/app/login/login.component.html
+++ b/FrontEnd/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="block">
+<div class="block content">
 	<form [formGroup]="loginForm" (ngSubmit)="login()">
 		<label for="username">Username: </label>
 		<input type="text" name="username" id="username" [formControl]="username">
