--- a/FrontEnd/src/app/navigation/navigation.component.css
+++ b/FrontEnd/src/app/navigation/navigation.component.css
@@ -3,7 +3,7 @@ ul{
 	height: 50px;
 	overflow: hidden;
 	
-	background-color: #cce0ff;
+	background-color: white;
 }
 
 .nav-elem{
@@ -17,13 +17,13 @@ ul{
 	line-height: 25px;
 	text-align: center;
 	padding: 10px;
-	color: #001433;
+	color: black;
 
-	background-color: #cce0ff;
+	background-color: white;
 }
 
 .nav-elem a:hover{
-	background-color: #b3d1ff;
+	background-color: #e6e6e6;
 }
 
 .left{
