--- a/FrontEnd/src/public/css/main.css
+++ b/FrontEnd/src/public/css/main.css
@@ -1,7 +1,25 @@
+#page-container{
+	width: 1200px;
+	margin: 0px auto;
+	padding-top: 5px;
+}
+
+#page-header{
+
+}
+
+body{
+	background-color: #f2f2f2;
+}
+
 .block{
-	display: block;
-	background-color: #cce0ff;
-	width: 1680px;
+	background-color: #fff;
+	box-shadow: 5px 5px 2px #cccccc;
+}
+
+.content{
 	margin-top: 10px;
 	padding: 10px;
+
+	min-height: 250px;
 }
