--- a/FrontEnd/src/public/css/main.css
+++ b/FrontEnd/src/public/css/main.css
@@ -19,7 +19,19 @@ body{
 
 .content{
 	margin-top: 10px;
-	padding: 10px;
+	padding: 15px;
 
 	min-height: 250px;
+}
+
+.med-title{
+	font-size: 30px;
+}
+
+.basic-button{
+	border: 1px solid #b3b3b3;
+	background-color: #f2f2f2;
+	width: 100px;
+	height: 40px;
+	font-size: 18px;
 }
