--- a/FrontEnd/src/app/timeline/timeline.component.html
+++ b/FrontEnd/src/app/timeline/timeline.component.html
@@ -1,3 +1,18 @@
 <div class="block content">
-  timeline works!
+	<div class="post-container">
+		<div class="post-header">
+			<h1 class="small-title">Another day another meme</h1>
+			<div class="post-details">
+				<span class="date">07.05.2017</span><span class="post-author">Ftujio</span>
+			</div>
+		</div>
+
+		<img src="src/public/img/doggo2.jpg">
+
+		<ul class="tags">
+			<li class="tag">meme</li>
+			<li class="tag">funny</li>
+			<li class="tag">doggo</li>
+		</ul>
+	</div>
 </div>
