Renamed a css class.

--- a/FrontEnd/src/app/timeline/timeline.component.html
+++ b/FrontEnd/src/app/timeline/timeline.component.html
@@ -1,9 +1,9 @@
 <div class="block content">
 	<div class="post-container">
 		<div class="post-header">
-			<h1 class="small-title">Another day another meme</h1>
+			<h1 class="post-title">Another day another meme</h1>
 			<div class="post-details">
-				<span class="date">07.05.2017</span><span class="post-author">Ftujio</span>
+				<span class="post-date">07.05.2017</span><span class="post-author">Ftujio</span>
 			</div>
 		</div>
 
