--- a/FrontEnd/src/public/css/main.css
+++ b/FrontEnd/src/public/css/main.css
@@ -31,6 +31,12 @@ body{
 	font-size: 25px;
 }
 
+.underline{
+	display: inline-block;
+	border-bottom: 2px solid black;
+	padding-bottom: 2px;
+}
+
 .basic-button{
 	border: 1px solid #b3b3b3;
 	background-color: #f2f2f2;
