Post layout and style is done.

--- a/FrontEnd/src/app/timeline/timeline.component.html
+++ b/FrontEnd/src/app/timeline/timeline.component.html
@@ -1,7 +1,7 @@
 <div class="block content">
 	<div class="post-container">
 		<div class="post-header">
-			<h1 class="post-title">Another day another meme</h1>
+			<h1 class="post-title underline">Another day another meme</h1>
 			<div class="post-details">
 				<span class="post-date">07.05.2017</span><span class="post-author">Ftujio</span>
 			</div>
@@ -10,9 +10,9 @@
 		<img src="src/public/img/doggo2.jpg">
 
 		<ul class="tags">
-			<li class="tag">meme</li>
-			<li class="tag">funny</li>
-			<li class="tag">doggo</li>
+			<li class="tag underline-small"><a routerLink="/">meme</a></li>
+			<li class="tag underline-small"><a routerLink="/">funny</a></li>
+			<li class="tag underline-small"><a routerLink="/">doggo</a></li>
 		</ul>
 	</div>
 </div>
