--- a/FrontEnd/src/public/css/main.css
+++ b/FrontEnd/src/public/css/main.css
@@ -36,6 +36,10 @@ body{
 	border-bottom: 2px solid black;
 	padding-bottom: 2px;
 }
+.underline-small{
+	display: inline-block;
+	border-bottom: 1px solid black;
+}
 
 .basic-button{
 	border: 1px solid #b3b3b3;
