--- a/FrontEnd/src/app/timeline/timeline.component.html
+++ b/FrontEnd/src/app/timeline/timeline.component.html
@@ -11,8 +11,42 @@
 
 		<ul class="tags">
 			<li class="tag underline-small"><a routerLink="/">meme</a></li>
-			<li class="tag underline-small"><a routerLink="/">funny</a></li>
 			<li class="tag underline-small"><a routerLink="/">doggo</a></li>
+			<li class="tag underline-small"><a routerLink="/">funny</a></li>
+		</ul>
+	</div>
+
+	<div class="post-container">
+		<div class="post-header">
+			<h1 class="post-title underline">Wowowow</h1>
+			<div class="post-details">
+				<span class="post-date">07.05.2017</span><span class="post-author">Ftujio</span>
+			</div>
+		</div>
+
+		<img src="src/public/img/doggo3.jpg">
+
+		<ul class="tags">
+			<li class="tag underline-small"><a routerLink="/">meme</a></li>
+			<li class="tag underline-small"><a routerLink="/">doggo</a></li>
+			<li class="tag underline-small"><a routerLink="/">trippy</a></li>
+		</ul>
+	</div>
+
+	<div class="post-container">
+		<div class="post-header">
+			<h1 class="post-title underline">Very fast</h1>
+			<div class="post-details">
+				<span class="post-date">07.05.2017</span><span class="post-author">Ftujio</span>
+			</div>
+		</div>
+
+		<img src="src/public/img/doggo4.jpg">
+
+		<ul class="tags">
+			<li class="tag underline-small"><a routerLink="/">meme</a></li>
+			<li class="tag underline-small"><a routerLink="/">doggo</a></li>
+			<li class="tag underline-small"><a routerLink="/">fast</a></li>
 		</ul>
 	</div>
 </div>
