--- a/FrontEnd/src/app/navigation/navigation.component.html
+++ b/FrontEnd/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="block">
 	<ul>
 		<li class="nav-elem left"><a routerLink="/">Home</a></li>
-		<li class="nav-elem left"><a href="#">Category</a></li>
+		<li class="nav-elem left"><a routerLink="/">Category</a></li>
 		<li class="nav-elem right"><a routerLink="/login">Login</a></li>
 		<li class="nav-elem right"><a routerLink="/register">Register</a></li>
 	</ul>
