Changed css class name.

--- a/FrontEnd/src/public/css/forms.css
+++ b/FrontEnd/src/public/css/forms.css
@@ -1,5 +1,5 @@
 form{
-	
+
 }
 
 form input{
@@ -15,6 +15,6 @@ form button{
 	margin-top: 10px;
 }
 
-#login-header{
+#form-header{
 	margin-bottom: 10px;
 }
