--- a/FrontEnd/src/app/components/login/login.component.html
+++ b/FrontEnd/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="block content">
-	<h1 class="med-title" id="login-header">Login</h1>
+	<h1 class="med-title" id="form-header">Login</h1>
 
 	<form [formGroup]="loginForm" (ngSubmit)="login()">
 		<div class="form-line">
