--- a/FrontEnd/src/app/components/navigation/navigation.component.html
+++ b/FrontEnd/src/app/components/navigation/navigation.component.html
@@ -2,6 +2,7 @@
 	<ul>
 		<li class="nav-elem left"><a routerLink="/">Home</a></li>
 		<li class="nav-elem left"><a routerLink="/">Category</a></li>
+		<li class="nav-elem left"><a routerLink="/post-image">Post Image</a></li>
 		<li class="nav-elem right"><a routerLink="/login">Login</a></li>
 		<li class="nav-elem right"><a routerLink="/register">Register</a></li>
 	</ul>
