Tweaked the form styling.

--- a/FrontEnd/src/app/components/register/register.component.html
+++ b/FrontEnd/src/app/components/register/register.component.html
@@ -3,19 +3,19 @@
 
 	<form [formGroup]="loginForm" (ngSubmit)="login()">
 		<div class="form-line">
-			<input type="text" name="username" id="username" [formControl]="username" placeholder="Username">
+			<input type="text" name="username" id="username" [formControl]="username" placeholder="Username" class="input">
 		</div>
 
 		<div class="form-line">
-			<input type="text" name="email" id="email" [formControl]="email" placeholder="Email">
+			<input type="text" name="email" id="email" [formControl]="email" placeholder="Email" class="input">
 		</div>
 
 		<div class="form-line">
-			<input type="password" name="password" id="password" [formControl]="password" placeholder="Password">
+			<input type="password" name="password" id="password" [formControl]="password" placeholder="Password" class="input">
 		</div>
 
 		<div class="form-line">
-			<input type="password" name="confirm-password" id="confirm-password" [formControl]="confirmPassword" placeholder="Confirm Password">
+			<input type="password" name="confirm-password" id="confirm-password" [formControl]="confirmPassword" placeholder="Confirm Password" class="input">
 		</div>
 
 		<button type="submit" class="basic-button">Submit</button>
