--- a/FrontEnd/src/app/components/login/login.component.html
+++ b/FrontEnd/src/app/components/login/login.component.html
@@ -3,13 +3,13 @@
 
 	<form [formGroup]="loginForm" (ngSubmit)="login()">
 		<div class="form-line">
-			<input type="text" name="username" id="username" [formControl]="username" placeholder="Username">
+			<input type="text" name="username" id="username" [formControl]="username" placeholder="Username" class="input">
 		</div>
 
 		<div class="form-line">
-			<input type="password" name="password" id="password" [formControl]="password" placeholder="Password">
+			<input type="password" name="password" id="password" [formControl]="password" placeholder="Password" class="input">
 		</div>
 
-		<button type="submit" class="basic-button">Submit</button>
+		<button type="submit" class="basic-button" id="submit">Submit</button>
 	</form>
 </div>
