--- a/FrontEnd/src/public/css/forms.css
+++ b/FrontEnd/src/public/css/forms.css
@@ -1,17 +1,19 @@
-form{
-
-}
-
-form input{
-	width: 350px;
-	height: 40px;
+.form-line{
+	height: 50px;
 	margin-bottom: 10px;
-	padding-left: 5px;
-	line-height: 200px;
-	font-size: 28px;
+	overflow: hidden;
 }
 
-form button{
+.input{
+	display: inline-block;
+	width: 350px;
+	height: 44px;
+	padding-left: 5px;
+	font-size: 28px;
+	float: left;
+}
+
+#submit{
 	margin-top: 10px;
 }
 
