Leaving flash messages for now.

--- a/FrontEnd/src/app/components/register/register.component.html
+++ b/FrontEnd/src/app/components/register/register.component.html
@@ -1,6 +1,8 @@
 <div class="block content">
 	<h1 class="med-title" id="form-header">Register</h1>
 
+	<flash-messages></flash-messages>
+
 	<form [formGroup]="loginForm" (ngSubmit)="login()">
 		<div class="form-line">
 			<input type="text" name="username" id="username" formControlName="username" placeholder="Username" class="input">
