--- a/client/src/public/css/main.css
+++ b/client/src/public/css/main.css
@@ -48,3 +48,30 @@ body{
 	height: 40px;
 	font-size: 18px;
 }
+
+.alert-danger{
+	display: inline-block;
+	min-width: 80px;
+	height: 30px;
+	padding: 10px;
+	margin-bottom: 10px;
+	text-align: center;
+	font-size: 20px;
+	line-height: 30px;
+	border-radius: 3px;
+	color: white;
+	background-color: #ff3333;
+}
+.alert-success{
+	display: inline-block;
+	min-width: 80px;
+	height: 30px;
+	padding: 10px;
+	margin-bottom: 10px;
+	text-align: center;
+	font-size: 20px;
+	line-height: 30px;
+	border-radius: 3px;
+	color: white;
+	background-color: #66ff66;
+}
