Added logout functionality.

--- a/client/src/app/components/navigation/navigation.component.html
+++ b/client/src/app/components/navigation/navigation.component.html
@@ -5,5 +5,6 @@
 		<li class="nav-elem left"><a routerLink="/post-image">Post Image</a></li>
 		<li class="nav-elem right"><a routerLink="/login">Login</a></li>
 		<li class="nav-elem right"><a routerLink="/register">Register</a></li>
+		<li class="nav-elem right"><a href="#" (click)="onLogout()">Logout</a></li>
 	</ul>
 </nav>
