--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,3 +1,8 @@
-<p>
-  profile works!
-</p>
+<div class="block content">
+	<div *ngIf="user">
+		<ul>
+			<li>{{ user.username }}</li>
+			<li>{{ user.email }}</li>
+		</ul>
+	</div>
+</div>
