--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,8 +1,8 @@
 <div class="block content">
 	<div *ngIf="user">
 		<ul>
-			<li>{{ user.username }}</li>
-			<li>{{ user.email }}</li>
+			<li>Username: {{ user.username }}</li>
+			<li>Email: {{ user.email }}</li>
 		</ul>
 	</div>
 </div>
