--- a/client/src/app/components/navigation/navigation.component.html
+++ b/client/src/app/components/navigation/navigation.component.html
@@ -2,10 +2,10 @@
 	<ul>
 		<li class="nav-elem left"><a routerLink="/">Home</a></li>
 		<li class="nav-elem left"><a routerLink="/">Category</a></li>
-		<li class="nav-elem left"><a routerLink="/post-image">Post Image</a></li>
-		<li class="nav-elem right"><a routerLink="/profile">Profile</a></li>
-		<li class="nav-elem right"><a routerLink="/login">Login</a></li>
-		<li class="nav-elem right"><a routerLink="/register">Register</a></li>
-		<li class="nav-elem right"><a href="#" (click)="onLogout()">Logout</a></li>
+		<li class="nav-elem left" *ngIf="authService.loggedIn()"><a routerLink="/post-image">Post Image</a></li>
+		<li class="nav-elem right" *ngIf="authService.loggedIn()"><a routerLink="/profile">Profile</a></li>
+		<li class="nav-elem right" *ngIf="!authService.loggedIn()"><a routerLink="/login">Login</a></li>
+		<li class="nav-elem right" *ngIf="!authService.loggedIn()"><a routerLink="/register">Register</a></li>
+		<li class="nav-elem right" *ngIf="authService.loggedIn()"><a href="#" (click)="onLogout()">Logout</a></li>
 	</ul>
 </nav>
