--- a/client/src/app/components/post-image/post-image.component.html
+++ b/client/src/app/components/post-image/post-image.component.html
@@ -1,5 +1,5 @@
 <div class="block content">
-	<h1 class="med-title" id="form-header">Post Image</h1>
+	<h1 class="med-title" id="form-header">Draw Image</h1>
 
 	<form [formGroup]="postImageForm" (ngSubmit)="postImage()">
 		<div class="form-line">
