--- a/client/src/app/components/draw-image/draw-image.component.html
+++ b/client/src/app/components/draw-image/draw-image.component.html
@@ -16,7 +16,7 @@
 				</ul>
 			</div>
 
-			<canvas id="canvas" width="1060" height="500"></canvas>
+			<canvas id="canvas" width="1060" height="500" #canvasObj></canvas>
 
 			<div class="tools-toolbar left-border">
 				<ul>
