Timeline component getting data from the server.

--- a/client/src/app/components/timeline/timeline.component.html
+++ b/client/src/app/components/timeline/timeline.component.html
@@ -7,7 +7,7 @@
 			</div>
 		</div>
 
-		<img src="{{ post['img-url'] }}">
+		<!-- <img src="{{ post['img-url'] }}"> -->
 
 		<ul class="tags">
 			<li class="tag underline-small" *ngFor="let tag of post.tags">
