--- a/client/src/app/components/timeline/timeline.component.html
+++ b/client/src/app/components/timeline/timeline.component.html
@@ -3,7 +3,7 @@
 		<div class="post-header">
 			<h1 class="post-title underline">{{ post.title }}</h1>
 			<div class="post-details">
-				<span class="post-date">{{ post.date }}</span><span class="post-author">Ftujio</span>
+				<span class="post-date">{{ post.date }}</span><span class="post-author">{{ post.author_name }}</span>
 			</div>
 		</div>
 
