--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="page-container">
 	<div id="page-header">
-		<p>Logo</p>
+		<img src="http://localhost:4200/src/public/img/drawingapp/logo.png" class="img" />
 		<app-navigation></app-navigation>
 	</div>
 
