Removed unused nabigation item.

--- a/client/src/app/components/navigation/navigation.component.html
+++ b/client/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="block">
 	<ul>
 		<li class="nav-elem left"><a routerLink="/">Home</a></li>
-		<li class="nav-elem left"><a routerLink="/">Category</a></li>
+		<!-- <li class="nav-elem left"><a routerLink="/">Category</a></li> -->
 		<li class="nav-elem left" *ngIf="authService.loggedIn()"><a routerLink="/post-image">Draw Image</a></li>
 		<li class="nav-elem right" *ngIf="authService.loggedIn()"><a routerLink="/profile">Profile</a></li>
 		<li class="nav-elem right" *ngIf="!authService.loggedIn()"><a routerLink="/login">Login</a></li>
