Changed the path to the logo image.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="page-container">
 	<div id="page-header">
-		<img src="http://localhost:4200/src/public/img/drawingapp/logo.png" class="img" />
+		<img src="/img/drawingapp/logo.png" class="img" />
 		<app-navigation></app-navigation>
 	</div>
 
