--- a/client/src/app/components/draw-image/draw-image.component.html
+++ b/client/src/app/components/draw-image/draw-image.component.html
@@ -1,18 +1,18 @@
 <div id="container">
 	<div id="wrapper">
-		<!-- <img src="http://localhost:4200/src/public/img/drawingapp/logo.png" id="logo"> -->
+		<!-- <img src="/img/drawingapp/logo.png" id="logo"> -->
 
 		<div id="editor-container">
 			<div class="tools-toolbar right-border">
 				<ul>
-					<li class="tool" id="brush"><img src="http://localhost:4200/src/public/img/drawingapp/paintbrush.png" class="tool-icon"></li>
-					<li class="tool" id="line"><img src="http://localhost:4200/src/public/img/drawingapp/diag-line.png" class="tool-icon"></li>
-					<li class="tool" id="circle"><img src="http://localhost:4200/src/public/img/drawingapp/circle.png" class="tool-icon"></li>
-					<li class="tool" id="square"><img src="http://localhost:4200/src/public/img/drawingapp/square.png" class="tool-icon"></li>
-					<li class="tool" id="eraser"><img src="http://localhost:4200/src/public/img/drawingapp/eraser.png" class="tool-icon"></li>
+					<li class="tool" id="brush"><img src="/img/drawingapp/paintbrush.png" class="tool-icon"></li>
+					<li class="tool" id="line"><img src="/img/drawingapp/diag-line.png" class="tool-icon"></li>
+					<li class="tool" id="circle"><img src="/img/drawingapp/circle.png" class="tool-icon"></li>
+					<li class="tool" id="square"><img src="/img/drawingapp/square.png" class="tool-icon"></li>
+					<li class="tool" id="eraser"><img src="/img/drawingapp/eraser.png" class="tool-icon"></li>
 					<!-- <li class="tool" id="undo"><img src="img/undo.png" class="tool-icon"></li> -->
-					<li class="tool" id="bin"><img src="http://localhost:4200/src/public/img/drawingapp/bin.png" class="tool-icon"></li>
-					<li class="tool"><a download="name.png" id="save"><img src="http://localhost:4200/src/public/img/drawingapp/save.png" class="tool-icon"></a></li>
+					<li class="tool" id="bin"><img src="/img/drawingapp/bin.png" class="tool-icon"></li>
+					<li class="tool"><a download="name.png" id="save"><img src="/img/drawingapp/save.png" class="tool-icon"></a></li>
 				</ul>
 			</div>
 
