--- a/client/src/app/components/draw-image/draw-image.component.html
+++ b/client/src/app/components/draw-image/draw-image.component.html
@@ -12,7 +12,7 @@
 					<li class="tool" id="eraser"><img src="/img/drawingapp/eraser.png" class="tool-icon"></li>
 					<!-- <li class="tool" id="undo"><img src="img/undo.png" class="tool-icon"></li> -->
 					<li class="tool" id="bin"><img src="/img/drawingapp/bin.png" class="tool-icon"></li>
-					<li class="tool"><a download="name.png" id="save"><img src="/img/drawingapp/save.png" class="tool-icon"></a></li>
+					<li class="tool"><a download="name.png" id="save" href="asdf"><img src="/img/drawingapp/save.png" class="tool-icon"></a></li>
 				</ul>
 			</div>
 
